@@ -7,27 +7,27 @@
  * license. The license text is available in the file COPYING.
  */
 
-#include "CanvasOpenGL.h"
+#include "LayerOpenGL.h"
 #include "ImageOpenGL.h"
 
 namespace pyc
 {
 
-CanvasOpenGL::CanvasOpenGL()
+LayerOpenGL::LayerOpenGL()
 {
 }
 
-CanvasOpenGL::~CanvasOpenGL()
+LayerOpenGL::~LayerOpenGL()
 {
 }
 
-void CanvasOpenGL::startDrawing()
+void LayerOpenGL::startDrawing()
 {
 	glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
 	glLoadIdentity();
 }
 
-void CanvasOpenGL::setColor(float red,
+void LayerOpenGL::setColor(float red,
 				float green,
 				float blue,
 				float alpha)
@@ -35,31 +35,31 @@ void CanvasOpenGL::setColor(float red,
 	glColor4f(red, green, blue, alpha);
 }
 
-void CanvasOpenGL::setBackgroundColor(float red,
+void LayerOpenGL::setBackgroundColor(float red,
 				float green,
 				float blue)
 {
 	glClearColor(red, green, blue, 0.0f);
 }
 
-void CanvasOpenGL::setPointSize(float size)
+void LayerOpenGL::setPointSize(float size)
 {
 	glPointSize(size);
 }
 
-void CanvasOpenGL::setLineWidth(float width)
+void LayerOpenGL::setLineWidth(float width)
 {
 	glLineWidth(width);
 }
 
-void CanvasOpenGL::drawPoint(float x, float y)
+void LayerOpenGL::drawPoint(float x, float y)
 {
 	glBegin(GL_POINTS);
 		glVertex3f(x, y, 0.0f);
 	glEnd();
 }
 
-void CanvasOpenGL::drawLine(float x1, float y1, float x2, float y2)
+void LayerOpenGL::drawLine(float x1, float y1, float x2, float y2)
 {
 	glBegin(GL_LINES);
 		glVertex3f(x1, y1, 0.0f);
@@ -67,7 +67,7 @@ void CanvasOpenGL::drawLine(float x1, float y1, float x2, float y2)
 	glEnd();
 }
 
-void CanvasOpenGL::drawTriangle(float x1,
+void LayerOpenGL::drawTriangle(float x1,
 					float y1,
 					float x2,
 					float y2,
@@ -82,7 +82,7 @@ void CanvasOpenGL::drawTriangle(float x1,
 	glEnd();
 }
 
-void CanvasOpenGL::drawFilledTriangle(float x1,
+void LayerOpenGL::drawFilledTriangle(float x1,
 					float y1,
 					float x2,
 					float y2,
@@ -96,7 +96,7 @@ void CanvasOpenGL::drawFilledTriangle(float x1,
 	glEnd();
 }
 
-void CanvasOpenGL::drawFilledSquare(float x,
+void LayerOpenGL::drawFilledSquare(float x,
 					float y,
 					float rad,
 					float rot)
@@ -117,7 +117,7 @@ void CanvasOpenGL::drawFilledSquare(float x,
 	glEnd();
 }
 
-void CanvasOpenGL::drawFilledCircle(float x,
+void LayerOpenGL::drawFilledCircle(float x,
 					float y,
 					float rad,
 					float beginAngle,
@@ -147,7 +147,7 @@ void CanvasOpenGL::drawFilledCircle(float x,
 	glEnd();
 }
 
-Image* CanvasOpenGL::loadPNG(std::string filePath)
+Image* LayerOpenGL::loadPNG(std::string filePath)
 {
 	ImageOpenGL* image = new ImageOpenGL();
 
